--- a/Week_2/Week2_Pre3.ipynb
+++ b/Week_2/Week2_Pre3.ipynb
@@ -42,7 +42,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "result = a_ndarray @ b_ndarray\r\n",
         "result"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -114,7 +114,7 @@
         "ans = myMatMul(a_ndarray, b_ndarray)\r\n",
         "ans"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -147,11 +147,11 @@
         "id": "fjSlqfecxT_N"
       },
       "source": [
-        "# d_ndarray_ = np.array([[-1, 2, 3], [4, -5, 6]])\r\n",
-        "# e_ndarray = np.array([[-9, 8, 7], [6, -5, 4]])\r\n",
+        "d_ndarray_ = np.array([[-1, 2, 3], [4, -5, 6]])\r\n",
+        "e_ndarray = np.array([[-9, 8, 7], [6, -5, 4]])\r\n",
         "# print(myMatMul(d_ndarray_, e_ndarray))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,26 +170,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2AiDlOmRyKE4",
-        "outputId": "e0f01a64-2903-481b-87fd-146e838c4106"
+        "outputId": "a818d766-4edb-495d-926b-3c2196411772"
       },
       "source": [
-        "np.transpose(ans)"
+        "e_ndarray = np.transpose(e_ndarray)\r\n",
+        "print(myMatMul(d_ndarray_, e_ndarray))"
       ],
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[  6,  12, -18],\n",
-              "       [ 29,  52, -51],\n",
-              "       [-20,  38, -48]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 30
+          "output_type": "stream",
+          "text": [
+            "[[ 46  -4]\n",
+            " [-34  73]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
