Update week 3 preclass 1

--- a/Week_3/Week3__Preclass1 .ipynb
+++ b/Week_3/Week3__Preclass1 .ipynb
@@ -28,7 +28,7 @@
         "import seaborn as sns\n",
         "from math import floor"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -50,7 +50,7 @@
         "X = pd.DataFrame(data = data['data'], columns= ['sepal_length', 'sepal_width', 'petal_length', 'petal_width'])\n",
         "y = pd.DataFrame(data = data['target'], columns= ['Species'])\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "df = pd.concat([X,y], axis = 1)\n",
         "df"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,7 +246,7 @@
       "source": [
         "df.head(4).info(verbose = True)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
       "source": [
         "df.value_counts(['Species'])"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +316,7 @@
         "else:\n",
         "  print('Data does not contain null value!')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,6 +471,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "b6XAqZgqFUPo"
+      },
+      "source": [
+        "It was the American botanist Edgar Anderson who collected the irises and organized the data.\n",
+        "From the above, it is also called Anderson's dataset.\n",
+        "Of the three types, two were collected and measured by the same person on the same day, on the same pasture, and on the same device. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "on6JQHqDmwh2"
       },
       "source": [
@@ -506,7 +517,7 @@
         "sw3 = df.iloc[:, 1]\n",
         "sw1"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +631,7 @@
       "source": [
         "df.loc[50:99]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1129,7 +1140,7 @@
       "source": [
         "df.loc[50:99, 'petal_length']"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1208,7 +1219,7 @@
       "source": [
         "df.loc[(df['petal_width'] == 0.2)]"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1540,7 +1551,7 @@
         "plt.pie(df['Species'].value_counts(), labels=data['target_names'])\n",
         "plt.show()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1583,7 +1594,7 @@
         "for patch, color in zip(bp1['boxes'], colors):\n",
         "    patch.set_facecolor(color)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1617,7 +1628,7 @@
         "vp3 = ax2[0].violinplot(df['petal_length'],vert = False)\n",
         "vp4 = ax2[1].violinplot(df['petal_width'],vert = False)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1663,7 +1674,7 @@
         "    sns.scatterplot(data=df, x=i, y=j, ax=axes[floor(pos/3), pos % 3], hue='Species')\n",
         "    pos = pos + 1"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1693,7 +1704,7 @@
       "source": [
         "pp = sns.pairplot(data=df, hue=\"Species\")"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1723,7 +1734,7 @@
         "corr_matrix = df.iloc[:,:-1].corr(method='pearson')\n",
         "print(corr_matrix)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1751,7 +1762,7 @@
       "source": [
         "hm = sns.heatmap(data=corr_matrix)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
